--- a/src/ChatService.Web/appsettings.json
+++ b/src/ChatService.Web/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "KafkaSetting": {
+    "BootstrapServer": "localhost:9092"
+  },
+  "MongoDbSetting": {
+    "ConnectionString" : "mongodb://160.30.21.70:32769",
+    "DatabaseName" : "ChatDatabase"
+  }
 }
