--- a/src/ChatService.Contract/ChatService.Contract.csproj
+++ b/src/ChatService.Contract/ChatService.Contract.csproj
@@ -6,4 +6,16 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Ardalis.SmartEnum" Version="8.2.0" />
+        <PackageReference Include="Confluent.Kafka" Version="2.8.0" />
+        <PackageReference Include="FluentValidation" Version="11.8.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
+        <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.8.0" />
+        <PackageReference Include="Mapster" Version="7.4.0" />
+        <PackageReference Include="MediatR" Version="12.4.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="LinqKit" Version="1.3.8" />
+        <PackageReference Include="MongoDB.Driver" Version="3.2.0" />
+    </ItemGroup>
 </Project>
