--- a/src/ChatService.Domain/ChatService.Domain.csproj
+++ b/src/ChatService.Domain/ChatService.Domain.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\ChatService.Contract\ChatService.Contract.csproj" />
+    </ItemGroup>
+    
 </Project>
