--- a/src/ChatService.Web/appsettings.json
+++ b/src/ChatService.Web/appsettings.json
@@ -10,7 +10,7 @@
     "BootstrapServer": "localhost:9092"
   },
   "MongoDbSetting": {
-    "ConnectionString" : "mongodb://160.30.21.70:32769",
+    "ConnectionString" : "mongodb://160.30.21.70:32808/?replicaSet=rs0",
     "DatabaseName" : "ChatDatabase"
   }
 }
