--- a/src/ChatService.Presentation/ChatService.Presentation.csproj
+++ b/src/ChatService.Presentation/ChatService.Presentation.csproj
@@ -6,4 +6,14 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Carter" Version="8.2.1" />
+        <PackageReference Include="Asp.Versioning.Http" Version="8.1.0" />
+        <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ChatService.Contract\ChatService.Contract.csproj" />
+    </ItemGroup>
+
 </Project>
