ci: add pagedlist, add mapper fix: create group, create Message.cs

--- a/src/ChatService.Application/ChatService.Application.csproj
+++ b/src/ChatService.Application/ChatService.Application.csproj
@@ -16,4 +16,8 @@
         <ProjectReference Include="..\ChatService.Contract\ChatService.Contract.csproj" />
     </ItemGroup>
     
+    <ItemGroup>
+      <Folder Include="Infrastructure\Abstractions\" />
+    </ItemGroup>
+    
 </Project>
