--- a/src/ChatService.Infrastructure/ChatService.Infrastructure.csproj
+++ b/src/ChatService.Infrastructure/ChatService.Infrastructure.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="EventBus\Ably\" />
       <Folder Include="EventBus\Kafka\EventHandlers\" />
     </ItemGroup>
     
