--- a/src/ChatService.Presentation/ChatService.Presentation.csproj
+++ b/src/ChatService.Presentation/ChatService.Presentation.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\ChatService.Application\ChatService.Application.csproj" />
       <ProjectReference Include="..\ChatService.Contract\ChatService.Contract.csproj" />
     </ItemGroup>
 
