--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ obj/
 riderModule.iml
 /_ReSharper.Caches/
 .idea
+/src/ChatService.Web/appsettings.json
+/src/ChatService.Web/appsettings.Development.json
