feat: consume last_message_read, add ably consumer base, add eventenvelope<object>

--- a/src/ChatService.Contract/ChatService.Contract.csproj
+++ b/src/ChatService.Contract/ChatService.Contract.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ably.io" Version="1.2.15" />
         <PackageReference Include="Ardalis.SmartEnum" Version="8.2.0" />
         <PackageReference Include="Confluent.Kafka" Version="2.8.0" />
         <PackageReference Include="FluentValidation" Version="11.8.0" />
