--- a/src/ChatService.Application/ChatService.Application.csproj
+++ b/src/ChatService.Application/ChatService.Application.csproj
@@ -17,7 +17,8 @@
     </ItemGroup>
     
     <ItemGroup>
-      <Folder Include="Infrastructure\Abstractions\" />
+      <Folder Include="UseCase\V1\DomainEvents\Group\" />
+      <Folder Include="UseCase\V1\DomainEvents\Message\" />
     </ItemGroup>
     
 </Project>
