--- a/src/ChatService.Application/ChatService.Application.csproj
+++ b/src/ChatService.Application/ChatService.Application.csproj
@@ -17,8 +17,7 @@
     </ItemGroup>
     
     <ItemGroup>
-      <Folder Include="UseCase\V1\DomainEvents\Group\" />
-      <Folder Include="UseCase\V1\DomainEvents\Message\" />
+      <Folder Include="UseCase\V1\DomainEvents\" />
     </ItemGroup>
     
 </Project>
